// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controllerMiddleware should set and keep references 1`] = `
Object {
  "agent": "agent",
  "cache": "cache",
  "controller": Object {
    "data": "new-data",
  },
  "handler": Object {
    "test": Test {
      "agent": "agent",
      "cache": "cache",
      "handler": [Circular],
      "issuer": "issuer",
      "keystore": "keystore",
      "logger": "logger",
      "metadata": "metadata",
      "metrics": "metrics",
      "repository": "repository",
      "support": "support",
      "token": "token",
    },
  },
  "issuer": "issuer",
  "keystore": "keystore",
  "logger": "logger",
  "metadata": "metadata",
  "metrics": "metrics",
  "repository": "repository",
  "support": "support",
  "token": "token",
}
`;

exports[`controllerMiddleware should set handler on context 1`] = `
Object {
  "agent": "agent",
  "cache": "cache",
  "controller": Object {
    "data": "data",
  },
  "handler": Object {
    "test": Test {
      "agent": "agent",
      "cache": "cache",
      "handler": [Circular],
      "issuer": "issuer",
      "keystore": "keystore",
      "logger": "logger",
      "metadata": "metadata",
      "metrics": "metrics",
      "repository": "repository",
      "support": "support",
      "token": "token",
    },
  },
  "issuer": "issuer",
  "keystore": "keystore",
  "logger": "logger",
  "metadata": "metadata",
  "metrics": "metrics",
  "repository": "repository",
  "support": "support",
  "token": "token",
}
`;

exports[`controllerMiddleware should set handler with specific key 1`] = `
Object {
  "agent": "agent",
  "cache": "cache",
  "controller": Object {
    "data": "data",
  },
  "handler": Object {
    "test": Test {
      "agent": "agent",
      "cache": "cache",
      "handler": [Circular],
      "issuer": "issuer",
      "keystore": "keystore",
      "logger": "logger",
      "metadata": "metadata",
      "metrics": "metrics",
      "repository": "repository",
      "support": "support",
      "token": "token",
    },
  },
  "issuer": "issuer",
  "keystore": "keystore",
  "logger": "logger",
  "metadata": "metadata",
  "metrics": "metrics",
  "repository": "repository",
  "support": "support",
  "token": "token",
}
`;
